got two working API calls and got second URL to interact with data gathered from first API call; initialized a global array that gathers genre data from first API call to use in second call

--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eCommerce Web Scraper</title>
+    <title>Read More TV</title>
 </head>
 <body>
-    <h1>eCommerce Web Scraper</h1>
+    <h1>Read More TV</h1>
+    <button id = "button">API CALL</button>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src = "script.js"></script>
 </body>
 </html>
