Added a contact page and results page to cohesively work together with the main page; it's a rough draft

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ReadWrite TV</title>
+    <title>Document</title>
 
     <link 
         rel="stylesheet" 
@@ -12,41 +12,51 @@
         crossorigin="anonymous">
     <link rel="stylesheet" src="style.css">
 </head>
+</head>
 <body>
-
+  
+  
 <nav class="navbar navbar-expand-lg navbar-light bg-success text-white">
-    <a class="navbar-brand" id="title" href="#"><h1>ReadMoreTV</h1></a>
+    <a class="navbar-brand" id="title" href="index.html"><h1>ReadMoreTV</h1></a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <a class="nav-link" href="contact.html" style="color:white;">Contact Us</a>
+                <a class="nav-link" href="#" style="color:white;">Contact Us</a>
         </div>
-</nav>
-
+    </nav>
 <br>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <h3 id="description">Merge your favorite tv show to books you might like to read</h3>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <h3 class="top">Contact Us</h3>
         </div>
-        <div class="row">
-            <div class ="col-sm-12">
-                <h5 id="prompt">Enter TV Show</h5>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6">
-                <form>
-                    <input class="form-control mr-sm-2" type="search" placeholder="Input TV Show" aria-label=""Search""></input>
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="pagesearch.html">Find Books</button>
-                </form>
-            </div>
-        </div>    
     </div>
-
-
-
-
-
+    <br>
+    <div class="row">
+        <div class="col-sm-12">
+            <input type="text" class="form-control" placeholder="Full Name">
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-sm-12">
+            <form>
+                <div class="form-group">
+                    <label for="InputEmail"><h4>Email address</h4></label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                </div>
+            </form>
+        </div>
+    </div>
+    <br>
+    <div class="row">
+        <div class="col-sm-12">
+            <div class="form-group">
+                <label for="exampleFormControlTextarea1"><h4>Message</h4></label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+        </div>
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+</div>
 
 
 <script
