--- a/pagesearch.html
+++ b/pagesearch.html
@@ -12,44 +12,31 @@
         crossorigin="anonymous">
     <link rel="stylesheet" src="style.css">
 </head>
+
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-success text-white">
-    <a class="navbar-brand" id="title" href="#"><h1>ReadMoreTV</h1></a>
+    <a class="navbar-brand" id="title" href="index.html"><h1>ReadMoreTV</h1></a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <a class="nav-link" href="contact.html" style="color:white;">Contact Us</a>
+            <a class="nav-link" href="contact.html" style="color:white;">Contact Us</a>
         </div>
 </nav>
 
-<br>
-    <div class="container">
-        <div class="row">
-            <div class="col-sm-12">
-                <h3 id="description">Merge your favorite tv show to books you might like to read</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class ="col-sm-12">
-                <h5 id="prompt">Enter TV Show</h5>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-sm-6">
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4">
+            <h5>Didn't find what you were looking for?</h5>
                 <form>
-                    <input class="form-control mr-sm-2" type="search" placeholder="Input TV Show" aria-label=""Search""></input>
+                    <input class="form-control mr-sm-2" type="search" placeholder="New Search" aria-label=""Search""></input>
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="pagesearch.html">Find Books</button>
                 </form>
-            </div>
-        </div>    
+        </div>
     </div>
+</div>
 
 
 
-
-
-
-
-<script
+    <script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous">
