--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="row">
             <div class="col-sm-6">
                 <form>
-                    <input class="form-control mr-sm-2" type="search" placeholder="Input TV Show" aria-label=""Search""></input>
+                    <input id="input-search" class="form-control mr-sm-2" type="search" placeholder="Input TV Show" aria-label=""Search""></input>
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="pagesearch.html">Find Books</button>
                 </form>
             </div>
