added content to pagesearch. updated README

--- a/index.html
+++ b/index.html
@@ -15,29 +15,29 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-success text-white">
-    <a class="navbar-brand" id="title" href="#"><h1>ReadMoreTV</h1></a>
+    <a class="navbar-brand" id="navbar-title" href="#"><h1>ReadMoreTV</h1></a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <a class="nav-link" href="contact.html" style="color:white;">Contact Us</a>
         </div>
 </nav>
 
 <br>
-    <div class="container">
+    <div class="container" id="search-container">
         <div class="row">
-            <div class="col-sm-12">
+            <div class="col-sm-12" id="search-title">
                 <h3 id="description">Merge your favorite tv show to books you might like to read</h3>
             </div>
         </div>
         <div class="row">
-            <div class ="col-sm-12">
-                <h5 id="prompt">Enter TV Show</h5>
+            <div class ="col-sm-12" id="search-bar">
+                <h5 id="prompt">Enter Your Favorite Shows Here!</h5>
             </div>
         </div>
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-6" id="book-search">
                 <form>
-                    <input class="form-control mr-sm-2" type="search" placeholder="Input TV Show" aria-label=""Search""></input>
-                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="pagesearch.html">Find Books</button>
+                    <input class="form-control mr-sm-2" type="search" placeholder="Input TV Show" aria-label="Search"></input>
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="pagesearch.html" id="search-button">Find A New Book to Read</button>
                 </form>
             </div>
         </div>    
