--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
 <br>
 <div class="container">
     <div class="row">
-        <div class="col-sm-12">
+        <div class="col-sm-12" id="contact-us">
             <h3 class="top">Contact Us</h3>
         </div>
     </div>
@@ -39,7 +39,7 @@
     <div class="row">
         <div class="col-sm-12">
             <form>
-                <div class="form-group">
+                <div class="form-group" id="e-mail">
                     <label for="InputEmail"><h4>Email address</h4></label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
                 </div>
@@ -55,7 +55,7 @@
             </div>
         </div>
     </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary" id="message-button">Submit</button>
 </div>
 
 
