--- a/pagesearch.html
+++ b/pagesearch.html
@@ -16,27 +16,97 @@
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-success text-white">
-    <a class="navbar-brand" id="title" href="index.html"><h1>ReadMoreTV</h1></a>
+    <a class="navbar-brand" id="navbar-title" href="index.html"><h1>ReadMoreTV</h1></a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <a class="nav-link" href="contact.html" style="color:white;">Contact Us</a>
         </div>
 </nav>
 
-<div class="container">
+<div class="container" id="container1">
     <div class="row">
-        <div class="col-sm-4">
-            <h5>Didn't find what you were looking for?</h5>
+        <div class="col-sm-4" id="search-more">
+           <h5>Didn't find what you were looking for?</h5>
                 <form>
-                    <input class="form-control mr-sm-2" type="search" placeholder="New Search" aria-label=""Search""></input>
+                    <input class="form-control mr-sm-2" type="search" placeholder="New Search" aria-label="Search"></input>
                     <button class="btn btn-outline-success my-2 my-sm-0" type="submit" href="pagesearch.html">Find Books</button>
                 </form>
         </div>
     </div>
 </div>
+<br>
 
+<div class="container">
+    <div class="row">
+        <ul class="list-group list-group-horizontal-sm" id="genres">
+            <li class="list-group-item" id="genre1">Genre 1</li>
+            <li class="list-group-item" id="genre2">Genre 2</li>
+            <li class="list-group-item" id="genre3">Genre 3</li>
+        </ul>
+    </div>    
+</div>
 
+<div class="container">
+    <div class="row">
+        <div class="col-sm-1" id="next-page">
+            <img>Image Here</img>
+        </div>
+        <div class="col-sm-2">
+            <p>Title: </p>
+            <p>Author:  </p>
+            <p>Year: </p> 
+        </div>
+        <div class="col-sm-8">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro possimus consequatur a id rem. Tenetur nihil hic a corporis sit incidunt aspernatur fuga mollitia! Unde perspiciatis eligendi alias, cum inventore ipsam laborum. Consequatur dolorem doloremque similique reiciendis odit eligendi suscipit? Ex totam accusantium sapiente doloribus rem quia facilis unde sit.
+        </div>
+        <div class="col-sm-1">
+            <img>Image Here<img>
+        </div>
+    </div>
+</div>
 
-    <script
+<hr>
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-1" id="next-page">
+            <img>Image Here</img>
+        </div>
+        <div class="col-sm-2">
+            <p>Title: </p>
+            <p>Author:  </p>
+            <p>Year: </p> 
+        </div>
+        <div class="col-sm-8">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro possimus consequatur a id rem. Tenetur nihil hic a corporis sit incidunt aspernatur fuga mollitia! Unde perspiciatis eligendi alias, cum inventore ipsam laborum. Consequatur dolorem doloremque similique reiciendis odit eligendi suscipit? Ex totam accusantium sapiente doloribus rem quia facilis unde sit.
+        </div>
+        <div class="col-sm-1">
+            <img>Image Here<img>
+        </div>
+    </div>
+</div>
+
+<hr>
+
+<div class="container">
+    <div class="row">
+        <div class="col-sm-1" id="next-page">
+            <img>Image Here</img>
+        </div>
+        <div class="col-sm-2">
+            <p>Title: </p>
+            <p>Author:  </p>
+            <p>Year: </p> 
+        </div>
+        <div class="col-sm-8">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro possimus consequatur a id rem. Tenetur nihil hic a corporis sit incidunt aspernatur fuga mollitia! Unde perspiciatis eligendi alias, cum inventore ipsam laborum. Consequatur dolorem doloremque similique reiciendis odit eligendi suscipit? Ex totam accusantium sapiente doloribus rem quia facilis unde sit.
+        </div>
+        <div class="col-sm-1">
+            <img>Image Here<img>
+        </div>
+    </div>
+</div>
+
+<script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
     integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
     crossorigin="anonymous">
