added search results variables to dynamically show results

--- a/pagesearch.html
+++ b/pagesearch.html
@@ -48,18 +48,18 @@
 <div class="container">
     <div class="row">
         <div class="col-sm-1" id="next-page">
-            <img>Image Here</img>
+            <img id = "book1Cover">Image Here</img>
         </div>
         <div class="col-sm-2">
-            <p>Title: </p>
-            <p>Author:  </p>
-            <p>Year: </p> 
+            <p id = "book1Title">Title: </p>
+            <p id = "book1Author">Author:  </p>
+            <p id = "book1Year">Year: </p> 
         </div>
-        <div class="col-sm-8">
+        <div id = "book1Desc" class="col-sm-8">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro possimus consequatur a id rem. Tenetur nihil hic a corporis sit incidunt aspernatur fuga mollitia! Unde perspiciatis eligendi alias, cum inventore ipsam laborum. Consequatur dolorem doloremque similique reiciendis odit eligendi suscipit? Ex totam accusantium sapiente doloribus rem quia facilis unde sit.
         </div>
         <div class="col-sm-1">
-            <img>Image Here<img>
+            <Button id = "book1BuyBtn">Buy Here</Button>
         </div>
     </div>
 </div>
