changes to style.css

--- a/contact.html
+++ b/contact.html
@@ -10,7 +10,7 @@
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
         crossorigin="anonymous">
-    <link rel="stylesheet" src="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 </head>
 <body>
@@ -40,8 +40,8 @@
         <div class="col-sm-12">
             <form>
                 <div class="form-group" id="e-mail">
-                    <label for="InputEmail"><h4>Email address</h4></label>
-                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                    <label for="InputEmail"><h4>E-mail address</h4></label>
+                    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="E-mail Address">
                 </div>
             </form>
         </div>
