--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
         crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" img src="/read-more-tv.png">
 </head>
 <body>
 
@@ -22,7 +22,7 @@
 
 <br>
     <div class="container" id="search-container">
-        <div class="row">
+        <div class="row" id="title-center">
             <div class="col-sm-12" id="search-title">
                 <h3 id="description">Merge your favorite tv show to books you might like to read</h3>
             </div>
@@ -32,12 +32,14 @@
                 <h5 id="prompt">Enter Your Favorite Shows Here!</h5>
             </div>
         </div>
-        <div class="row">
+        <div class="row" id="center-bar">
             <div class="col-sm-6" id="book-search">
-                <form>
+                <div>
+                <form id="search">
                     <input id="inputSearch" class="form-control mr-sm-2" type="search" placeholder="Input TV Show" aria-label="Search"></input>
                     <button id = "searchButton" class="btn btn-outline-success my-2 my-sm-0" type="submit" href="pagesearch.html">Find Books</button>
                 </form>
+            </div>
             </div>
         </div>    
     </div>
