--- a/pagesearch.html
+++ b/pagesearch.html
@@ -10,21 +10,24 @@
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
         crossorigin="anonymous">
-    <link rel="stylesheet" src="style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
 <nav class="navbar navbar-expand-lg navbar-light bg-success text-white">
-    <a class="navbar-brand" id="navbar-title" href="index.html"><h1>ReadMoreTV</h1></a>
+    
+    <a class="navbar-brand" id="navbar-title" href="index.html"><h1>Read More TV</h1></a>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <a class="nav-link" href="contact.html" style="color:white;">Contact Us</a>
         </div>
 </nav>
 
 <div class="container" id="container1">
+    
     <div class="row">
-        <div class="col-sm-4" id="search-more">
+       <img src="Assets/readmoretv.png">
+       <div class="col-sm-4" id="search-more">
            <h5>Didn't find what you were looking for?</h5>
                 <form>
                     <input class="form-control mr-sm-2" type="search" placeholder="New Search" aria-label="Search"></input>
