added logo and content to the css file

--- a/pagesearch.html
+++ b/pagesearch.html
@@ -24,10 +24,9 @@
 </nav>
 
 <div class="container" id="container1">
-    
-    <div class="row">
-       <img src="Assets/readmoretv.png">
-       <div class="col-sm-4" id="search-more">
+<img src="Assets/readmoretv.png" class="img1">   
+ <div class="row">
+    <div class="col-sm-4" id="search-more">
            <h5>Didn't find what you were looking for?</h5>
                 <form>
                     <input class="form-control mr-sm-2" type="search" placeholder="New Search" aria-label="Search"></input>
