--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
 </head>
 </head>
 <body>
-  
+     
   
 <nav class="navbar navbar-expand-lg navbar-light bg-success text-white">
     <a class="navbar-brand" id="title" href="index.html"><h1>ReadMoreTV</h1></a>
@@ -23,7 +23,8 @@
         </div>
     </nav>
 <br>
-<div class="container">
+<img src="Assets/readmoretv.png" class="img1">    
+<div class="container">   
     <div class="row">
         <div class="col-sm-12" id="contact-us">
             <h3 class="top">Contact Us</h3>
@@ -50,8 +51,8 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="form-group">
-                <label for="exampleFormControlTextarea1"><h4>Message</h4></label>
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <label for="exampleFormControlTextarea1"><h4>Leave a Message</h4></label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">Leave a Message</textarea>
             </div>
         </div>
     </div>
