--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"></meta>
   <title>Read More TV</title>
     <link 
         rel="stylesheet" 
@@ -19,10 +20,10 @@
                     <a class="nav-link" href="contact.html" style="color:white;">Contact Us</a>
         </div>
 </nav>
-
+<img src="Assets/readmoretv.png" class="img1">    
 <br>
-    <div class="container" id="search-container">
-        <div class="row" id="title-center">
+    <div class="container-fluid" id="search-container1">
+        <div class="row">
             <div class="col-sm-12" id="search-title">
                 <h3 id="description">Merge your favorite tv show to books you might like to read</h3>
             </div>
@@ -32,10 +33,9 @@
                 <h5 id="prompt">Enter Your Favorite Shows Here!</h5>
             </div>
         </div>
-        <div class="row" id="center-bar">
-            <div class="col-sm-6" id="book-search">
-                <div>
-                <form id="search">
+        <div class="row">
+            <div class="col-sm-4" id="book-search">
+                <form>
                     <input id="inputSearch" class="form-control mr-sm-2" type="search" placeholder="Input TV Show" aria-label="Search"></input>
                     <button id = "searchButton" class="btn btn-outline-success my-2 my-sm-0" type="submit" href="pagesearch.html">Find Books</button>
                 </form>
