--- a/contact.html
+++ b/contact.html
@@ -28,7 +28,7 @@
 <div class="container">   
     <div class="row">
         <div class="col-sm-12" id="contact-us">
-            <h3 class="top">Contact Us</h3>
+            <!-- <h3 class="top">Contact Us</h3> -->
         </div>
     </div>
     <br>
@@ -43,7 +43,7 @@
         <div class="col-sm-12">
             <form>
                 <div class="form-group" id="e-mail">
-                    <label for="InputEmail"><h4>E-mail address</h4></label>
+                    <!-- <label for="InputEmail"><h4>E-mail address</h4></label> -->
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="E-mail Address">
                 </div>
             </form>
@@ -53,7 +53,7 @@
     <div class="row">
         <div class="col-sm-12">
             <div class="form-group">
-                <label for="exampleFormControlTextarea1"><h4>Leave a Message</h4></label>
+                <!-- <label for="exampleFormControlTextarea1"><h4>Leave a Message</h4></label> -->
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">Leave a Message</textarea>
             </div>
         </div>
@@ -61,6 +61,8 @@
     <button type="submit" class="btn btn-primary" id="message-button">Submit</button>
 </div>
 </div>
+</div>
+
 
 <script
     src="https://code.jquery.com/jquery-3.5.1.min.js"
