made small changes, but need to pull main code again

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <link rel="stylesheet" href="style.css" img src="/read-more-tv.png">
 </head>
 <body>
-    <video autoplay muted loop id="myVideo">
+<!--     <video autoplay muted loop id="myVideo">
         <source src="forest.mp4" type="video/mp4">
-      </video>
+      </video>  -->
 
 <nav class="navbar navbar-expand-lg navbar-light bg-success text-white">
     <a class="navbar-brand" id="navbar-title" href="#" style="color:white;"><h1 id="navTitle"><svg class="bi bi-book" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
@@ -42,7 +42,7 @@
             </div>
         </div>
         </div> 
-        <div class="row">
+          <div class="row">
             <div class="col-lg-2 mx-auto" id="book-search">
                 <form>
                     <input id="inputSearch" class="form-control mr-sm-2" type="search" placeholder="Input TV Show" aria-label="Search"></input>
