commented out some CSS and amended column sizes in JS. Making page responsive on all screen sizes.

--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
         <div class="col-sm-12">
             <div class="form-group">
                 <!-- <label for="exampleFormControlTextarea1"><h4>Leave a Message</h4></label> -->
-                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">Leave a Message</textarea>
+                <textarea class="form-control" id="exampleFormControlTextarea1" placeholder="Leave a Message" rows="3"></textarea>
             </div>
         </div>
     </div>
