--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="row">
             <div class="col-lg-2 mx-auto" id="book-search">
                 <form class="star">
-                    <input id="inputSearch" class="form-control mr-sm-2" type="search" placeholder="Input TV Show" aria-label="Search"></input>
+                    <input id="inputSearch" class="form-control mr-xs-2" type="search" placeholder="Input TV Show" aria-label="Search"></input>
                     <br>
                     <button id = "searchButton" class="btn btn-outline-success my-2 my-sm-0" type="submit">Find Books</button>
                 </form>
