--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" 
         crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" img src="/read-more-tv.png">
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="https://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2015-01-12/f8828d4d8265f2ff4ee57eedc740a4c6.ico" type="image/x-icon">
 </head>
 <!-- <body class="contact-image"> -->
     
