adjusted button placements

--- a/index.html
+++ b/index.html
@@ -41,8 +41,9 @@
   <div class="form-label-group">
     <input id="inputSearch" class="form-control mr-sm-2" type="search" placeholder="Pokemon" aria-label="Search"></input>
   </div>
+  <br>
   <button id = "searchButton" class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Find Books</button>
-  <p class="mt-5 mb-3 text-muted text-center">© 2017-2020</p>
+  <p class="mt-5 mb-3 text-muted text-center">© 2020</p>
 </form>
 
 
