small changes on font

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
     </div>
 </nav>
 
-<form class="form-signin container-fluid">
-  <div class="text-center mb-4">
-    <h1 class="h3 mb-3 font-weight-normal">READ MORE TV</h1>
+<form class="form-signin contentC container-fluid">
+  <div class="text-center">
+    <h1 class="font-weight-normal">READ MORE TV</h1>
     <p>Find books to read based on your favorite TV shows.</p>
   </div>
   <div class="form-label-group">
