cleaned up some style

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
     </div>
 </nav>
 
-<form class="form-signin container-fluid">
+<form class="rounded-lg form-signin container-fluid">
   <div class="text-center mb-4">
-    <h1 class="h3 mb-3 font-weight-normal">READ MORE TV</h1>
-    <p>Find books to read based on your favorite TV shows.</p>
+    <h1 class="font-weight-normal">READ MORE TV</h1>
+    <p id = "tagline">Find books to read based on your favorite TV shows.</p>
   </div>
   <div class="form-label-group">
     <input id="inputSearch" class="form-control mr-sm-2" type="search" placeholder="Enter TV Show Here" aria-label="Search"></input>
