fixing pathing issue

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         crossorigin="anonymous">
     <link rel="icon" href="https://d1ujqdpfgkvqfi.cloudfront.net/favicon-generator/htdocs/favicons/2015-01-12/f8828d4d8265f2ff4ee57eedc740a4c6.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./assets/style.css" img src="/read-more-tv.png">
+    <link rel="stylesheet" href="./Assets/style.css" img src="/read-more-tv.png">
 </head>
 <!-- <body class="contact-image"> -->
     
@@ -84,6 +84,6 @@
         integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
         crossorigin="anonymous">
     </script>
-    <script src = "./assets/script.js"></script>
+    <script src = "./Assets/script.js"></script>
 </body> 
 </html>
