cleaning code up and getting rid of commented out stuff

--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
     <link href="https://fonts.googleapis.com/css2?family=Quicksand&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./Assets/style.css" img src="/read-more-tv.png">
 </head>
-<!-- <body class="contact-image"> -->
-    
 <body>
 <nav class="navbar navbar-expand-lg navbar-light text-white">
     <a class="navbar-brand" id="navbar-title" href="#" style="color:white;"><h1 id="navTitle">Read More TV</h1></a>
@@ -29,7 +27,7 @@
     </div>
 </nav>
 
-<form class="rounded-lg form-signin container-fluid">
+<main class="rounded-lg form-signin container-fluid">
   <div class="text-center mb-4">
     <h1 class="font-weight-normal">READ MORE TV</h1>
     <p id = "tagline">Find books to read based on your favorite TV shows.</p>
@@ -40,50 +38,23 @@
   <br>
   <button id = "searchButton" class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Find Books</button>
   <p class="mt-5 mb-3 text-muted text-center">© 2020</p>
-</form>
-
-
-
-
-
-<!--     <div class="container contentC mx-auto" style="width: 500px;" id="search-container">
-        <form class="star">
-        <div class="row">
-            <div class="col-lg-4 mx-auto" id="search-title">
-                <h3 id="description">READ MORE TV</h3>
-            </div>
-        </div>
-        <div class="row">
-            <div class ="col-lg-4 mx-auto" id="search-bar">
-                <h5 id="prompt"></h5>
-            </div>
-        </div>
-        </div> 
-          <div class="row">
-            <div class="col-lg-2 mx-auto" id="book-search">
-                    <input id="inputSearch" class="form-control mr-sm-2" type="search" placeholder="Input TV Show" aria-label="Search"></input>
-                    <br>
-                    <button id = "searchButton" class="btn btn-outline-success my-2 my-sm-0" type="submit">Find Books</button>
-                </form>
-            </div>
-            </div> -->
-        <div class="container-books mx-auto bookC" ></div>   
-
-    <script
-        src="https://code.jquery.com/jquery-3.5.1.min.js"
-        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-        crossorigin="anonymous">
-    </script>
-    <script 
-        src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
-        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
-        crossorigin="anonymous">
-    </script>
-    <script 
-        src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
-        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
-        crossorigin="anonymous">
-    </script>
-    <script src = "./Assets/script.js"></script>
+</main>
+<div class="container-books mx-auto bookC" ></div>   
+<script
+    src="https://code.jquery.com/jquery-3.5.1.min.js"
+    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous">
+</script>
+<script 
+    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
+    crossorigin="anonymous">
+</script>
+<script 
+    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
+    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
+    crossorigin="anonymous">
+</script>
+<script src = "./Assets/script.js"></script>
 </body> 
 </html>
