--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"></meta>
-  <title>Read More TV</title>
+    <title>Read More TV</title>
     <link 
         rel="stylesheet" 
         href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" 
@@ -15,46 +15,52 @@
     <link rel="stylesheet" href="./Assets/style.css" img src="/read-more-tv.png">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light text-white">
-    <a class="navbar-brand" id="navbar-title" href="#" style="color:white;"><h1 id="navTitle">Read More TV</h1></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-    </button>   
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <a class="nav-link" href="about.html" style="color:white;">
-            About Us
-        </a>
-    </div>
-</nav>
-
-<main class="rounded-lg form-signin container-fluid">
-  <div class="text-center mb-4">
-    <h1 class="font-weight-normal">READ MORE TV</h1>
-    <p id = "tagline">Find books to read based on your favorite TV shows.</p>
-  </div>
-  <div class="form-label-group">
-    <input id="inputSearch" class="form-control mr-sm-2" type="search" placeholder="Enter TV Show Here" aria-label="Search"></input>
-  </div>
-  <br>
-  <button id = "searchButton" class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Find Books</button>
-  <p class="mt-5 mb-3 text-muted text-center">© 2020</p>
-</main>
-<div class="container-books mx-auto bookC" ></div>   
-<script
-    src="https://code.jquery.com/jquery-3.5.1.min.js"
-    integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
-    crossorigin="anonymous">
-</script>
-<script 
-    src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
-    integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
-    crossorigin="anonymous">
-</script>
-<script 
-    src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
-    integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
-    crossorigin="anonymous">
-</script>
-<script src = "./Assets/script.js"></script>
+    <!-- NAV BAR -->
+    <nav class="navbar navbar-expand-lg navbar-light text-white">
+        <a class="navbar-brand" id="navbar-title" href="#" style="color:white;"><h1 id="navTitle">Read More TV</h1></a>
+        <!-- RESPONSIVE HAMBURGER MENU FOR NARROWER DEVICES -->
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>   
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <a class="nav-link" href="about.html" style="color:white;">
+                About Us
+            </a>
+        </div>
+    </nav>
+    <!-- MAIN CONTENT -->
+    <main class="mainIndex rounded-lg form-signin container-fluid">
+        <div class="text-center mb-4">
+            <h1 class="font-weight-normal">READ MORE TV</h1>
+            <p id = "tagline">Find books to read based on your favorite TV shows.</p>
+        </div>
+        <div class="form-label-group">
+            <!-- USER INPUT THAT IS USED TO GENERATE DATA FROM API -->
+            <input id="inputSearch" class="form-control mr-sm-2" type="search" placeholder="Enter TV Show Here" aria-label="Search"></input>
+        </div>
+        <br>
+        <!-- BUTTON THAT INTIATES API CALLS AND GENERATES SEARCH RESULTS BASED ON USER INPUT -->
+        <button id = "searchButton" class="btn btn-outline-secondary my-2 my-sm-0" type="submit">Find Books</button>
+        <p class="mt-5 mb-3 text-muted text-center">© 2020</p>
+    </main>
+    <!-- CONTAINER FOR DYNAMIC SEARCH RESULTS -->
+    <div class="container-books mx-auto bookC" ></div>   
+    <!-- SCRIPTS USED INCLUDING JQUERY, BOOTSTRAP, JAVASCRIPT  -->
+    <script
+        src="https://code.jquery.com/jquery-3.5.1.min.js"
+        integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+        crossorigin="anonymous">
+    </script>
+    <script 
+        src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" 
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" 
+        crossorigin="anonymous">
+    </script>
+    <script 
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" 
+        integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" 
+        crossorigin="anonymous">
+    </script>
+    <script src = "./Assets/script.js"></script>
 </body> 
 </html>
